# mb_rust_app

./: .gitignore  Cargo.toml  README.md  hello.html  template.html
src/: bind.rs  fnc.rs  lib.rs  main.rs  message.rs  system.rs  win32.rs
ui/: app.js
