[package]
name = "miniblink_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"
miniblink = {path = "E:/3rdParty/gui/rust-mb"}
lazy_static = "1.4"
log = "0.4"
simple-log = "1.0.0"
# extend miniblink api
libloading = "0.7"
# serialize struct
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.1.8"